bases/devops/kiroshi/server/images/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kiroshi
  name: kiroshi
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: kiroshi
  sessionAffinity: None
  type: ClusterIP
